@@ -1,4 +1,9 @@
-﻿shmuel 03.06.2014 22:53:34 +0200 - build 361
+﻿shmuel 04.06.2014 16:35:43 +0200 - build 362
+
+1. LuaFAR: panel.GetPanelInfo().PluginHandle устанавливается в nil, если от Фара пришёл NULL
+   (раньше и в этом случае создавалась userdata).
+
+shmuel 03.06.2014 22:53:34 +0200 - build 361
 
 1. Поле 'key' в спецификации макроса сделано опциональным.
 
